@@ -4,6 +4,7 @@
 
 == DDT 0.6.1 () ==
  * Holding Ctrl and clicking over a reference now always opens a new editor set on the reference target.
+ * Fixed NPE bug when opening D search page with a package reference selected in the editor.
 
 == DDT 0.6.0 (2012-05-17) ==
  * Fixed bug causing DDT to never load the pre-defined editor Code Templates.
